--- a/README
+++ b/README
@@ -2,8 +2,7 @@ NAME
     Attribute::Handlers - Simpler definition of attribute handlers
 
 VERSION
-    This document describes version 0.93 of Attribute::Handlers, released
-    July 20, 2011.
+    This document describes version 0.96 of Attribute::Handlers.
 
 SYNOPSIS
         package MyClass;
@@ -99,7 +98,7 @@ DESCRIPTION
     class LoudDecl:
 
         package LoudDecl;
-    
+
         sub foo: Loud {...}
 
     causes the above handler to be invoked, and passed:
@@ -286,7 +285,7 @@ DESCRIPTION
 
         use Attribute::Handlers;
         use Tie::Cycle;
-    
+
         sub UNIVERSAL::Cycle : ATTR(SCALAR) {
             my ($package, $symbol, $referent, $attr, $data, $phase) = @_;
             $data = [ $data ] unless ref $data eq 'ARRAY';
@@ -296,9 +295,9 @@ DESCRIPTION
         # and thereafter...
 
         package main;
-    
+
         my $next : Cycle('A'..'Z');     # $next is now a tied variable
-    
+
         while (<>) {
             print $next;
         }
@@ -359,7 +358,7 @@ DESCRIPTION
     current package. Otherwise it is installed in the qualifier's package:
 
         package Here;
-    
+
         use Attribute::Handlers autotie => {
              Other::Good => Tie::SecureHash, # tie attr installed in Other::
                      Bad => Tie::Taxes,      # tie attr installed in Here::
@@ -373,7 +372,7 @@ DESCRIPTION
     of an attribute:
 
         package Tie::Me::Kangaroo:Down::Sport;
-    
+
         use Attribute::Handlers autotie =>
              { '__CALLER__::Roo' => __PACKAGE__ };
 
@@ -493,7 +492,7 @@ EXAMPLES
 
 
         # my %hsh :Good(q/bye) :Omni(q/bus/);
-                              
+
         MyClass::Good:ATTR(HASH)( 'SomeOtherClass',     # class
                                   'LEXICAL',            # no typeglob
                                   \%hsh,                # referent
@@ -501,7 +500,7 @@ EXAMPLES
                                   'q/bye'               # raw attr data
                                   'CHECK',              # compiler phase
                                 );
-                    
+
         MyClass::Omni:ATTR(HASH)( 'SomeOtherClass',     # class
                                   'LEXICAL',            # no typeglob
                                   \%hsh,                # referent
@@ -567,8 +566,8 @@ DIAGNOSTICS
 
     "Attribute handler %s doesn't handle %s attributes"
         A handler for attributes of the specified name *was* defined, but
-        not for the specified type of declaration. Typically encountered whe
-        trying to apply a "VAR" attribute handler to a subroutine, or a
+        not for the specified type of declaration. Typically encountered
+        when trying to apply a "VAR" attribute handler to a subroutine, or a
         "SCALAR" attribute handler to some other type of variable.
 
     "Declaration of %s attribute in package %s may clash with future
@@ -610,7 +609,7 @@ BUGS
     :-) Bug reports and other feedback are most welcome.
 
 COPYRIGHT AND LICENSE
-             Copyright (c) 2001-2009, Damian Conway. All Rights Reserved.
+             Copyright (c) 2001-2014, Damian Conway. All Rights Reserved.
            This module is free software. It may be used, redistributed
                and/or modified under the same terms as Perl itself.
 
